Estructura inicial de la pagina

--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
   <title>Pagina para Aprender Git y Github</title>
 </head>
 <body>
-  
+  <main class="contenedor">
+    <section class="uno">
+      <div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat sit nesciunt rem voluptate quos harum iusto accusamus provident qui! Suscipit aspernatur natus quas voluptas quaerat corrupti vero sapiente? Eligendi, inventore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem cupiditate sapiente facere voluptates explicabo aperiam soluta neque nulla a quos, nemo magnam sequi fugit placeat? Ipsam dignissimos aliquid cumque perspiciatis.</p>
+      </div>
+    </section>
+    <section class="dos">
+      <div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam atque quas, facere fugit voluptate minus expedita alias error nulla nemo! Distinctio blanditiis reiciendis tenetur voluptas maiores animi sint, labore temporibus.
+        </p>
+      </div>
+    </section>
+    <section class="tres">
+      <div class="rectangulo">
+
+      </div>
+    </section>
+  </main>
   
 </body>
 </html>
