Agregue el encabezado de la pagina

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <main class="contenedor">
+    <section class="titulo">
+      <h1>Pagina para Enseñar Git y Github</h1>
+    </section>
     <section class="uno">
       <div>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat sit nesciunt rem voluptate quos harum iusto accusamus provident qui! Suscipit aspernatur natus quas voluptas quaerat corrupti vero sapiente? Eligendi, inventore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem cupiditate sapiente facere voluptates explicabo aperiam soluta neque nulla a quos, nemo magnam sequi fugit placeat? Ipsam dignissimos aliquid cumque perspiciatis.</p>
